<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hotelbookingapp.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.hotelbookingapp.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.hotelbookingapp.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.hotelbookingapp.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
</navigation>