<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendar.CalendarFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tabBackground="@color/colorPrimaryDark"
        app:tabIndicatorColor="@color/colorPrimary">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_sap_toi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_sap_toi" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_hoan_tat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_hoan_tat" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_da_huy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_da_huy" />
    </android.support.design.widget.TabLayout>

    <view
        android:id="@+id/view_tab_calendar"
        class="android.support.v4.view.ViewPager"
        android:layout_width="match_parent"
        android:layout_height="684dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_calendar" />

</android.support.constraint.ConstraintLayout>